--- a/style.css
+++ b/style.css
@@ -1,22 +1,26 @@
 
+html{
+    font-size:62.5% ;
+}
 body{
     text-align: center;
+    font-size: 1.6rem;
     background-color: rgb(168, 63, 131);
 }
 .small-links {
     text-align: left;
     display: block;
-    font-size: 4vw;
+    font-size: 1.6rem;
 }
-h1{font-size: 10vw;}
+h1{font-size: 4rem;}
 
 .main-links {
-    font-size: 6vw;
+    font-size: 2.4rem;
     height: auto;
 }
-
+.content-wrapper{max-width: 1100px;}
 img.fluid-constrained {
-  width: clamp(150px,70vw, 600px);
+  width: clamp(150px,70vw, 400px);
     height: auto;
     border: 1vw solid rgb(168, 63, 131);
 }
@@ -27,13 +31,11 @@ img.fluid-constrained {
     margin-bottom: 4vw;
 }
 .bottom-section {
-    background-color: rgb(249, 193, 193);
-    padding: 2vw;
-    border-radius: 2vw;
-    margin-top: 4vw;
+    background-color: rgb(249, 193, 193);}
+
+@media (min-width: 758px) {
+h1 {font-size: 6rem;}
+.main-links {font-size: 4rem;}
+.small-links {font-size: 2rem;}
+.content-wrapper {text-align: left;}
 }
-br{color: black;
-    font-size: 4vw;
-    line-height: 4vw;
-    font-weight: bold;}
-    
